--- a/css/styles.css
+++ b/css/styles.css
@@ -513,7 +513,7 @@ section#services div.container div.carousel div.slider section.subsection_slider
 
 	background-image: url('../vectors/handshake.svg');
 
-	background-size: 500px;
+	background-size: 550px;
 
 	background-repeat: no-repeat;
 
@@ -553,7 +553,7 @@ section#services div.container div.carousel div.slider section.subsection_slider
 
 	background-image: url('../vectors/unarmed_guard.svg');
 
-	background-size: 500px;
+	background-size: 550px;
 
 	background-repeat: no-repeat;
 
@@ -573,7 +573,7 @@ section#services div.container div.carousel div.slider section.subsection_slider
 
 	background-image: url('../vectors/recepcionist.svg');
 
-	background-size: 500px;
+	background-size: 550px;
 
 	background-repeat: no-repeat;
 
@@ -593,7 +593,7 @@ section#services div.container div.carousel div.slider section.subsection_slider
 
 	background-image: url('../vectors/contact.svg');
 
-	background-size: 450px;
+	background-size: 500px;
 
 	background-repeat: no-repeat;
 
@@ -669,7 +669,7 @@ section#services div.container div.carousel div.slider section.subsection_slider
 
 	font-weight: 600;
 
-	color: #98979A;
+	color: #B1BECD;
 
 }
 
