--- a/css/styles.css
+++ b/css/styles.css
@@ -919,7 +919,7 @@ nav#sideNav {
 
 	position: fixed;
 
-	right: -300px;
+	right: -235px;
 
 	top: 0;
 
@@ -934,6 +934,8 @@ nav#sideNav {
 	display: flex;
 
 	justify-content: center;
+
+	box-shadow: -5px -2px 15px rgba(70, 65, 70, .2);
 
 }
 
@@ -985,7 +987,9 @@ nav#sideNav ul li a.menu_option i.fas {
 
 	background-color: transparent;
 
-	color: rgb(152, 151, 154);
+	color: rgba(101, 98, 102, .7);
+
+	text-shadow: 5px 5px 10px rgba(152, 151, 154, .6);
 
 }
 
@@ -1007,9 +1011,9 @@ div.menu_button {
 
 	top: 0;
 
-	margin-right: 10px;
+	margin-right: 0.1%;
 
-	margin-top: 10px;
+	margin-top: 0.1%;
 
  	display: flex;
 
@@ -1031,7 +1035,7 @@ div.menu_button div.menu_button_burguer {
 
  	height: 20px;
 
-	background-color: #B1BECD; 
+	background-color: #496d96; 
 
 	border-radius: 5px;
 
@@ -1049,7 +1053,7 @@ div.menu_button div.menu_button_burguer::before, div.menu_button div.menu_button
 
 	height: 20px;
 
-	background-color: #496D96;
+	background-color: #b1becd;
 
 	border-radius: 5px;
 
