Refinamentos de layout na Section - About.
Realizados refinamentos e finalização da Section About.

--- a/css/styles.css
+++ b/css/styles.css
@@ -297,9 +297,9 @@ section#about div.about-right-col div.about-text p.about-content {
 
 section#about div.about-right-col div.about-text p.about-content span.content-markup {
 
-	font-weight: 700;
+	font-weight: 400;
 
-	color: #868D97;
+	color: #354B6C;
 
 }
 
