--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,8 @@ body {
 
     color: var(--second-color);
 
+    background-color: #EFEFEB;
+
 }
 
 h1, h2, p {
@@ -284,8 +286,6 @@ header.main_header nav.page_nav {
 
     section.services div.container {
 
-        border: 1px solid black;
-
         width: 90%;
 
         margin: 10px auto;
@@ -294,7 +294,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel {
 
-        height: 800px;
+        height: 900px;
 
         position: relative;
 
@@ -332,7 +332,7 @@ header.main_header nav.page_nav {
 
         position: absolute;
 
-        bottom: 20px;
+        bottom: 0px;
 
         cursor: pointer;
 
@@ -342,11 +342,19 @@ header.main_header nav.page_nav {
 
         left: 10px;
 
+        color: #B1BECD;
+
+        display: none;
+
     }
 
     section.services div.container div.carousel div.controls span.right {
 
         right: 10px;
+
+        color: #B1BECD;
+
+        display: none;
 
     }
 
@@ -356,7 +364,7 @@ header.main_header nav.page_nav {
 
         left: 50%;
 
-        bottom: 20px;
+        bottom: 0px;
 
         transform: translate(-50%);
 
@@ -374,9 +382,9 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.controls ul#section_indicators li {
 
-        width: 15px;
+        width: 20px;
 
-        height: 15px;
+        height: 20px;
 
         border: 2px solid #B1BECD;
 
@@ -410,7 +418,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider1_right_col {
 
-        flex-basis: 50%;
+        flex-basis: 40%;
 
         width: 320px;
 
@@ -426,7 +434,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider2_right_col {
 
-        flex-basis: 50%;
+        flex-basis: 40%;
 
         width: 320px;
 
@@ -442,7 +450,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider3_right_col {
 
-        flex-basis: 50%;
+        flex-basis: 40%;
 
         width: 320px;
 
@@ -458,7 +466,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider4_right_col {
 
-        flex-basis: 50%;
+        flex-basis: 40%;
 
         width: 320px;
 
@@ -474,7 +482,7 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div#slider5_right_col {
 
-        flex-basis: 50%;
+        flex-basis: 40%;
 
         width: 320px;
 
@@ -490,23 +498,115 @@ header.main_header nav.page_nav {
 
     section.services div.container div.carousel div.slider section.subsection_slider div.slider_left_col {
 
-        border: 1px solid limegreen;
-
-        flex-basis: 50%;
+        flex-basis: 60%;
 
         display: flex;
 
         flex-direction: column;
 
+        align-items: center;
+
     }
 
     section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col p.slider_content {
 
-        text-align: justify;
+        font-family: "Poppins", sans-serif;
 
-        font-size: 12px;
+        font-weight: 400;
+
+        font-size: 0.8rem;
 
         padding: 10px;
+
+        color: #464146;
+
+        text-align: justify;
+
+    }
+
+    section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col h2.slider_title {
+
+        font-family: "Poppins", sans-serif;
+
+        font-weight: 700;
+
+        font-size: 25px;
+
+        box-sizing: border-box;
+
+        margin-top: 20px;
+
+        margin-bottom: 15px;
+
+        color: #496D96;
+
+        text-transform: uppercase;
+
+    }
+
+    section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col a.contact_link {
+
+        width: 200px;
+
+        position: relative;
+
+        display: inline-block;
+
+        text-align: center;
+
+        margin-top: 100px;
+
+        margin-bottom: 50px;
+
+        padding: 20px;
+
+        font-size: 20px;
+
+        letter-spacing: 3px;
+
+        text-decoration: none;
+
+        text-transform: uppercase;
+
+        border-radius: 10px;
+
+        box-shadow: -2px -2px 12px rgba(255, 255, 255, 1), 
+
+                -2px -2px 16px rgba(255, 255, 255, 1),
+
+                inset 2px 2px 8px rgba(255, 255, 255, 0.5), 
+
+                2px 2px 12px rgba(70, 65, 70, 0.5);
+
+    }
+
+    section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col a.contact_link:hover {
+
+        box-shadow: inset -2px -2px 12px rgba(255, 255, 255, 1), 
+
+                inset -2px -2px 16px rgba(255, 255, 255, 1),
+
+                inset 2px 2px 8px rgba(255, 255, 255, 0.5), 
+
+                inset 2px 2px 12px rgba(70, 65, 70, 0.5);
+
+    }
+
+    section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col a.contact_link:hover span#contact_slide_button {
+
+        display: inline-block;
+
+        transform: scale(0.98);
+
+        color: rgba(53, 75, 108, 1);
+
+    }
+
+    section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col a.contact_link span#contact_slide_button {
+
+        font-weight: 700;
+
+        color: rgba(53, 75, 108, .6);
 
     }
 
