--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,26 @@ header.main_header nav.page_nav div.nav_toggle {
 
     z-index: var(--z-fixed);
 
+    width: 50px;
+
+    height: 50px;
+
+    position: absolute;
+
+    top: 10px;
+
+    right: 10px;
+
+    display: flex;
+
+    align-items: center;
+
+    justify-content: center;
+
+    border-radius: 5px;
+
+    backdrop-filter: blur(10px);
+
 }
 
 .show {
@@ -730,6 +750,8 @@ main.main_dashboard section.home div.home_social {
 
     flex-direction: column;
 
+    align-items: flex-end;
+
     margin-bottom: var(--mb-5);
 
 }
@@ -774,7 +796,7 @@ main.main_dashboard section.home div.home_logo {
 
     position: absolute;
 
-    right: 5px;
+    left: 5px;
 
     bottom: 5px;
 
