--- a/css/styles.css
+++ b/css/styles.css
@@ -219,8 +219,6 @@ header.main_header nav.page_nav {
         padding: 30px;
     
         text-align: justify;
-
-        border: 1px solid black;
     
     }
     
@@ -536,11 +534,13 @@ header.main_header nav.page_nav {
 
         margin-bottom: 50px;
 
+        box-sizing: border-box;
+
         padding: 20px;
 
         font-size: 20px;
 
-        letter-spacing: 3px;
+        letter-spacing: 2px;
 
         text-decoration: none;
 
@@ -582,7 +582,11 @@ header.main_header nav.page_nav {
 
     section#services div.container div.carousel div.slider section.subsection_slider div.slider_left_col a.contact_link span#contact_slide_button {
 
+        font-family: "Poppins", sans-serif;
+
         font-weight: 700;
+
+        font-size: 25px;
 
         color: rgba(53, 75, 108, .6);
 
