--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,13 @@ header.main_header nav.page_nav {
 
         flex-basis: 70%;
 
-        border: 1px solid red;
+        display: flex;
+
+        flex-direction: column;
+
+        align-items: center;
+
+        justify-content: center;
 
     }
 
@@ -648,8 +654,6 @@ header.main_header nav.page_nav {
 
         text-transform: uppercase;
 
-        text-align: center;
-
     }
 
     section.teams div.container div.team_right_col p.team_content {
@@ -658,13 +662,85 @@ header.main_header nav.page_nav {
 
         font-weight: 400;
 
-        font-size: 0.8rem;
+        font-size: 0.9rem;
 
         padding: 20px;
 
         color: #464146;
 
         text-align: justify;
+
+    }
+
+    section.teams div.container div.team_right_col a.contact_link {
+
+        width: 200px;
+
+        position: relative;
+
+        display: inline-block;
+
+        text-align: center;
+
+        margin-top: 20px;
+
+        margin-bottom: 20px;
+
+        box-sizing: border-box;
+
+        padding: 20px;
+
+        font-size: 20px;
+
+        letter-spacing: 2px;
+
+        text-decoration: none;
+
+        text-transform: uppercase;
+
+        border-radius: 10px;
+
+        box-shadow: -2px -2px 12px rgba(255, 255, 255, 1), 
+
+                    -2px -2px 16px rgba(255, 255, 255, 1),
+
+                    inset 2px 2px 8px rgba(255, 255, 255, 0.5), 
+
+                    2px 2px 12px rgba(70, 65, 70, 0.5);
+
+    }
+
+    section.teams div.container div.team_right_col a.contact_link:hover {
+
+        box-shadow: inset -2px -2px 12px rgba(255, 255, 255, 1), 
+
+                    inset -2px -2px 16px rgba(255, 255, 255, 1),
+
+                    inset 2px 2px 8px rgba(255, 255, 255, 0.5), 
+
+                    inset 2px 2px 12px rgba(70, 65, 70, 0.5);
+
+    }
+
+    section.teams div.container div.team_right_col a.contact_link:hover span#contact_teams {
+
+        display: inline-block;
+
+        transform: scale(0.98);
+
+        color: rgba(53, 75, 108, 1);
+
+    }
+
+    section.teams div.container div.team_right_col a.contact_link span#contact_teams {
+
+        font-family: "Poppins", sans-serif;
+
+        font-weight: 700;
+
+        font-size: 25px;
+
+        color: rgba(53, 75, 108, .6);
 
     }
 
